# LSPosed

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: 1.8.3.yml  core.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/org/lsposed/manager/receivers/: ModuleActivatorReceiver.java
core/: build.gradle.kts
core/src/main/java/android/content/res/: XResources.java
core/src/main/java/de/robv/android/xposed/: XposedBridge.java  XposedInit.java
core/src/main/java/org/lsposed/lspd/deopt/: PrebuiltMethodsDeopter.java
core/src/main/java/org/lsposed/lspd/hooker/: OpenDexFileHooker.java
core/src/main/java/org/lsposed/lspd/impl/: LSPosedBridge.java  LSPosedContext.java
core/src/main/jni/: CMakeLists.txt
daemon/: build.gradle.kts
daemon/src/main/java/org/lsposed/lspd/service/: BridgeService.java  ConfigFileManager.java  Dex2OatService.java  LSPApplicationService.java
daemon/src/main/jni/: CMakeLists.txt  obfuscation.cpp  obfuscation.h
dex2oat/: build.gradle.kts
dex2oat/src/main/cpp/: CMakeLists.txt  dex2oat.cpp
gradle/: libs.versions.toml
hiddenapi/bridge/: build.gradle.kts
hiddenapi/stubs/: build.gradle.kts
magisk-loader/: build.gradle.kts
magisk-loader/magisk_module/: sepolicy.rule  service.sh
magisk-loader/src/main/jni/: CMakeLists.txt
magisk-loader/src/main/jni/src/: magisk_loader.cpp
native/: CMakeLists.txt  README.md
native/include/common/: config.h  logging.h  utils.h
native/include/core/: config_bridge.h  context.h  native_api.h
native/include/elf/: elf_image.h  symbol_cache.h
native/include/framework/: android_types.h
native/include/jni/: jni_bridge.h  jni_hooks.h
native/src/core/: context.cpp  native_api.cpp
native/src/elf/: elf_image.cpp  symbol_cache.cpp
native/src/jni/: dex_parser_bridge.cpp  hook_bridge.cpp  native_api_bridge.cpp  resources_hook.cpp
services/daemon-service/: build.gradle.kts
services/manager-service/: build.gradle.kts
xposed/: build.gradle.kts
xposed/src/main/kotlin/org/matrix/vector/nativebridge/: DexParserBridge.kt  HookBridge.kt  NativeAPI.kt  ResourcesHook.kt
zygisk/: README.md  build.gradle.kts  proguard-rules.pro
zygisk/module/: action.sh  customize.sh  daemon  module.prop  sepolicy.rule  service.sh  uninstall.sh
zygisk/src/main/cpp/: CMakeLists.txt  ipc_bridge.cpp  module.cpp
zygisk/src/main/cpp/include/: ipc_bridge.h  zygisk.hpp
zygisk/src/main/kotlin/org/matrix/vector/: ParasiticManagerHooker.kt  ParasiticManagerSystemHooker.kt
zygisk/src/main/kotlin/org/matrix/vector/core/: Main.kt
zygisk/src/main/kotlin/org/matrix/vector/service/: BridgeService.kt  ParcelUtils.kt
(+4 files in other folders)
